# ComBadge

./: Makefile  README.md  launch_combadge.py  main.py  pyproject.toml  pytest.ini  requirements-test.txt  test_core_only.py  test_headless.py
.claude/: allPrompts.MD
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/_workflowsNotActive/: build.yml  ci.yml  test.yml
.github/workflows/: release.yml
config/: .env.example  default_config.yaml  development.yaml  production.yaml  user_preferences.yaml
data/tutorials/: basic_workflow.json  confidence_mastery.json  email_integration.json
docs/: api-integration-guide.md  full-api-configuration-guide.md  template-update-guide.md
docs/admin_guide/: configuration.md  installation.md
docs/developer_guide/: build_system.md  deployment_guide.md  dev_patches.md  getting_started.md
docs/troubleshooting/: launch_errors.md
docs/user_guide/: best_practices.md  first_run_setup.md  getting_started.md  user_manual.md
knowledge/business_rules/: escalation_procedures.yaml  fleet_policies.yaml  operational_constraints.yaml  validation_rules.yaml
requirements/: base.txt
scripts/: BUILD.md
scripts/deployment/: system_requirements.py  validate_installation.py
scripts/maintenance/: backup_manager.py  cleanup_utility.py  update_manager.py
src/combadge/: __init__.py
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_email_to_api_workflow.py  test_end_to_end_system.py  (+2 more)
(+89 files in other folders)
