[project]
name = "combadge"
version = "0.1.0"
description = "A local natural language processing tool that converts emails and commands into API calls"
authors = [{name = "ComBadge Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "customtkinter>=5.2.0",
    "pyyaml>=6.0",
    "sqlite3",
    "ollama>=0.1.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
combadge = "combadge.main:main"

[tool.setuptools]
packages = ["combadge"]

[tool.setuptools.package-dir]
combadge = "src/combadge"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "UP"]